# bank-statement-ai-fe

./: .gitignore  next.config.mjs  package-lock.json  package.json
.encore/: manifest.json
app/: layout.tsx  page.tsx
app/statements/: page.tsx
components/: add-card-dialog.tsx  navbar.tsx  upload-statement-dialog.tsx
components/dashboard/: card-filter.tsx  category-donut-chart.tsx  monthly-stacked-bar-chart.tsx  period-filter.tsx  spending-trend-chart.tsx  transaction-list.tsx
components/statements/: missing-cards-banner.tsx  statement-table.tsx
components/ui/: badge.tsx  dialog.tsx
lib/: api.ts  client.ts
scripts/: gen_icons.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
