[package]
name = "bank-statement-ai"
version = "0.1.0"
description = "BankAI - Personal Bank Statement Analyser"
authors = []
edition = "2021"

[lib]
name = "bank_statement_ai_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
